--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.2.21",
+    "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
@@ -22,6 +24,7 @@
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
+    "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -48,6 +51,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "metro-config": "^0.80.12",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
